# zigi

./: README.md  pyproject.toml
meetings_coordinator/: meetings_coordinator.py
src/: meetings_coordinator.py  product_list.py
tests/: test_meetings_coordinator.py  test_product_list.py
