[tool.poetry]
name = "zigi"
version = "0.1.0"
description = "zigi"
authors = ["Vinny <yehonatanwe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
